# tree-sitter-moonbit

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  TODO.md  binding.gyp  build.zig  build.zig.zon  eslint.config.mjs  grammar.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  test_syntax.moonbit  tree-sitter.json  tsconfig.json
examples/: 001.mbt  002.mbt  003.mbt  004.mbt  005.mbt  006.mbt  007.mbt  008.mbt  009.mbt  010.mbt  011.mbt  012.mbt  HAMT.mbt  abort.mbt  add_string.mbt  adt.mbt  annotation_node.mbt  arith.mbt  array.mbt  array_pat.mbt  array_rest_pat.mbt  assoc_array.mbt  bad_string.mbt  big_circle_with_node.mbt  bool.mbt  builtin_test.mbt  bytes.mbt  bytes2.mbt  char_op.mbt  check_apply.mbt  circle_with_node.mbt  circular_letrec.mbt  closure.mbt  compare_test.mbt  constant_folding.mbt  contify_return.mbt  contify_return2.mbt  contify_return_tail.mbt  count.mbt  disambiguation.mbt  (+121 more)
mbtq/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
scripts/: generate.py  test.py
src/: grammar.json  node-types.json  parser.c  scanner.c
vsc/: .gitignore  .prettierrc.json  CHANGELOG.md  CMakeLists.txt  README.md  moon.mod.json  package-lock.json  package.json
vscode/: .gitignore  .prettierignore  CMakeLists.txt  README.md  esbuild.mts  eslint.config.mjs  moon.mod.json  package-lock.json  package.json  pnpm-lock.yaml  test_replace.mbt  test_syntax_error.mbt  tsconfig.json
vscode/src/: extension.ts  search.ts  sidebar.ts  tsconfig.json
vscode/src/grep/: grep.mbt  has_error_test.mbt  jsonrpc.mbt  jsonrpc_test.mbt  jsonrpc_wbtest.mbt  main.mbt  moon.pkg.json  replace.mbt  search.mbt
vscode/src/grep/test/: jsonrpc_test.mbt
vscode/src/pattern/: parse.mbt
vscode/src/sidebar/: index.css  index.tsx  types.ts
vscode/src/sidebar/components/: App.tsx  ControlButton.tsx  FileItem.tsx  InputBox.tsx  MatchItem.tsx  ReplaceInput.tsx  SearchHeader.tsx  SearchInput.tsx  SearchReplaceGroup.tsx  SearchResults.tsx
vscode/src/sidebar/hooks/: useVSCode.ts
vscode/test/: multilayer_test.mbt
(+219 files in other folders)
