[package]
name = "tree-sitter-moonbit"
description = "moonbit grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "moonbit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-moonbit"
edition = "2018"
license = "MIT"


include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
