[package]
name = "tree-sitter-moonbit"
description = "Tree-sitter grammar for Moonbit"
version = "1.0.0"
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "moonbit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/moonbitlang/tree-sitter-moonbit"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
